...
    <Icon
      name="add-circle"
      color={blue}
      size={40}
      title="Add Player"
      onPress={() => navigation.navigate("AddPlayer")}
      testID="add_player_button"
    />
  ) : null;

  return (
    <Card>
      <Card.Title style={styles.title}>Players</Card.Title>
...
