...
          >
            <Icon
              name="add-circle"
              color={blue}
              size={40}
              accessibilityLabel="New Game"
              testID="new_game"
            />
            <Text style={styles.newGameText}>New Game</Text>
          </TouchableOpacity>
        </View>
      </View>
      <FlatList
...
